<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.sunny.sunny.workingtime.ClockFragment">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/button_start" />

    <TextView
        android:id="@+id/textShowTime"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_above="@+id/buttonStart"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:gravity="center"
        android:text="@string/clock_first_text"
        android:textAlignment="center"
        android:background="@drawable/view_frame"
        android:textSize="30sp" />

    <Button
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonStart"
        android:layout_toEndOf="@+id/textDate"
        android:layout_toRightOf="@+id/textDate"
        android:text="@string/button_finish"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_above="@+id/textShowTime"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonStart"
        android:layout_alignBottom="@+id/buttonStart"
        android:layout_toLeftOf="@+id/textDate"
        android:layout_toStartOf="@+id/textDate"
        android:text="@string/button_cancel"
        android:visibility="invisible" />

</RelativeLayout>
